--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,12 @@ html, body, #root {
 
 .search {
   outline: none;
-  padding: 20px 7%;
+  padding: 20px 3%;
   border-radius: 20px;
   border: none;
   margin-bottom: 5%;
   background: rgba(250, 250, 250, 0.85);
+  font-size: 1.2em;
 }
 
 .city {
@@ -84,7 +85,7 @@ p {
 
 @media only screen and (max-width: 600px) {
   .search {
-      padding: 20px 15%;
+      padding: 20px 7%;
   }
 
   .city {
