--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ html, body, #root {
   flex-direction: column;
 }
 
+.app-header {
+  color: rgba(250, 250, 250, 0.85);
+}
+
 .search {
   outline: none;
   padding: 20px 3%;
@@ -68,7 +72,7 @@ p {
   margin-left: 0.2em;
   border-radius: 30px;
   color: #fff;
-  background: #ff8c00;
+  background: #8e44ad;
 }
 
 .city-icon {
