--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,40 @@ html, body, #root {
   color: rgba(250, 250, 250, 0.85);
 }
 
+.search-wrapper {
+  display: flex;
+  background: rgba(250, 250, 250, 0.85);
+
+  border-radius: 20px;
+
+  margin-bottom: 5%;
+
+}
+
+.search-button {
+  background: url('./assets/icons/loupe.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 22px;
+  border: none;
+  /* outline: none; */
+
+  min-width: 42px;
+  padding: 20px; 
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: rgba(240, 240, 240, 0.85);
+
+}
+
 .search {
   outline: none;
-  padding: 20px 3%;
-  border-radius: 20px;
+  padding: 20px;
+  border-radius: 20px 0 0 20px;
   border: none;
-  margin-bottom: 5%;
   background: rgba(250, 250, 250, 0.85);
   font-size: 1.2em;
 }
